--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -16,17 +16,6 @@
     "    Driver/Simulation Executor class\n",
     "    Visualization class\n",
     "\"\"\"\n",
-    "\n",
-    "# class NodeDict:\n",
-    "#     \"\"\" A simple dictionary class for looking up nodes by their node_id. \"\"\"\n",
-    "#     def __init__(self):\n",
-    "#         self.nodes = {}\n",
-    "        \n",
-    "#     def add_node(self, node):\n",
-    "#         self.nodes[node.node_id] = node\n",
-    "\n",
-    "#     def del_node(self, node_id):\n",
-    "#         del self.nodes[node_id]\n",
     "        \n",
     "class Node:\n",
     "    \"\"\" Implementation of the Node structure in our graph. \"\"\"\n",
@@ -85,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +153,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Dijkstra's algorithm for shortest paths.\n",
+    "# Implementation adapted from online version published by David Eppstein, UC Irvine, 4 April 2002.\n",
+    "\n",
+    "from priodict import priorityDictionary\n",
+    "\n",
+    "class ShortestPath:\n",
+    "    def __init__(self, graph, start, end):\n",
+    "        self.graph = graph\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "    def next_node(self): \n",
+    "        shortest_path = self.shortest_path(self.graph, self.start, self.end)\n",
+    "        \n",
+    "        return shortest_path\n",
+    "\n",
+    "    def dijkstra(self, G, start, end=None):\n",
+    "        \"\"\"\n",
+    "        Find shortest paths from the start vertex to all vertices nearer than or equal to the end.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        D = {} # dictionary of final distances\n",
+    "        P = {} # dictionary of predecessors\n",
+    "        Q = priorityDictionary() # estimated distances of non-final vertices\n",
+    "        Q[start] = 0\n",
+    "\n",
+    "        for v in Q:\n",
+    "            D[v] = Q[v]\n",
+    "            if v == end: break\n",
+    "\n",
+    "            for w in G[v]:\n",
+    "                vwLength = D[v] + G[v][w]\n",
+    "                if w in D:\n",
+    "                    if vwLength < D[w]:\n",
+    "                        raise ValueError, \"Dijkstra: found better path to already-final vertex\"\n",
+    "                elif w not in Q or vwLength < Q[w]:\n",
+    "                    Q[w] = vwLength\n",
+    "                    P[w] = v\n",
+    "\n",
+    "        return (D,P)\n",
+    "\n",
+    "    def shortest_path(self, G, start, end):\n",
+    "        \"\"\"\n",
+    "        Find a single shortest path from the given start vertex to the given end vertex.\n",
+    "        The input has the same conventions as Dijkstra().\n",
+    "        The output is a list of the vertices in order along the shortest path.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        D,P = self.dijkstra(G,start,end)\n",
+    "        #print P\n",
+    "        Path = []\n",
+    "        while 1:\n",
+    "            Path.append(end)\n",
+    "            if end == start: break\n",
+    "            end = P[end]\n",
+    "        Path.reverse()\n",
+    "        return Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -200,8 +256,8 @@
     "            reader = csv.reader(csvfile, delimiter=',')\n",
     "            \n",
     "            for indx, row in enumerate(reader):\n",
-    "                # The node_id for the Node will be indx + 1.\n",
-    "                node_id = indx #+ 1\n",
+    "                # The node_id for the Node will be indx.\n",
+    "                node_id = indx \n",
     "                \n",
     "                # Node type.\n",
     "                node_type = int(row[6])\n",
@@ -255,16 +311,20 @@
     "        \n",
     "class Grid:    \n",
     "    def __init__(self, max_rows, max_cols, node_file, edge_file):\n",
+    "        # Save some important attributes.\n",
     "        self.max_rows = max_rows\n",
     "        self.max_cols = max_cols\n",
     "        self.node_file = node_file\n",
     "        self.edge_file = edge_file\n",
     "        \n",
+    "        # Perform initialization of the gridspace.\n",
     "        self.initialize_grid()\n",
     "        self.initialize_nodes()\n",
     "        self.initialize_edges()\n",
+    "        self.set_paths()\n",
     "        \n",
     "    def initialize_grid(self):\n",
+    "        # Create a grid with the given number of rows, cols.\n",
     "        self.grid = [[0 for x in range(self.max_cols)] for x in range(self.max_rows)]\n",
     "        \n",
     "    def initialize_nodes(self):\n",
@@ -274,11 +334,17 @@
     "        self.node_dict = reader.node_dict\n",
     "        \n",
     "        # Save off the node array.\n",
-    "        nodes = reader.nodes\n",
+    "        self.nodes = reader.nodes\n",
+    "        \n",
+    "        # Initialize a list container of destination nodes.\n",
+    "        self.destination_nodes = []\n",
     "        \n",
     "        # Iterate through the returned nodes, adding each node to the grid in the\n",
     "        # appropriate location.\n",
-    "        for node in nodes:\n",
+    "        for node in self.nodes:\n",
+    "            if node.node_type == 4:\n",
+    "                self.destination_nodes.append(node)\n",
+    "            \n",
     "            self.grid[node.y-1][node.x-1] = node\n",
     "            \n",
     "    def initialize_edges(self):\n",
@@ -296,32 +362,68 @@
     "            \n",
     "            # Add a new entry to node a's neighbors dict for node b, setting it\n",
     "            # to the weight.\n",
-    "            node_a.neighbors[node_b.node_id] = edge.weight"
+    "            node_a.neighbors[node_b.node_id] = edge.weight\n",
+    "            \n",
+    "        # Initialize a dictionary to store just the neighbors.\n",
+    "        self.neighbors_dict = {}\n",
+    "        \n",
+    "        # For every entry in the node dictionary,\n",
+    "        for node_id, node_obj in self.node_dict.iteritems():\n",
+    "            # Save just the neighbors.\n",
+    "            self.neighbors_dict[node_id] = node_obj.neighbors\n",
+    "            \n",
+    "    def set_paths(self):\n",
+    "        for node in self.nodes:\n",
+    "            if node.node_type == 4:\n",
+    "                continue\n",
+    "            \n",
+    "            node_id = node.node_id\n",
+    "            \n",
+    "            for destination in self.destination_nodes:\n",
+    "                destination_node_id = destination.node_id\n",
+    "                \n",
+    "                #print (node_id, destination_node_id)\n",
+    "                \n",
+    "#                 node.paths[destination_node_id] = ShortestPath(self.neighbors_dict, \n",
+    "#                                                                node_id, \n",
+    "#                                                                destination_node_id).next_node()\n",
+    "            \n",
+    "            #print(node.paths)\n",
+    "                \n",
+    "class Simulation:\n",
+    "    def __init__(self, grid, params):\n",
+    "        self.grid = grid\n",
+    "        \n",
+    "        pass\n",
+    "    \n",
+    "    def run():\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[122, 98, 77, 59, 43, 26, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "max_rows = 66\n",
     "max_cols = 139\n",
     "\n",
     "grid = Grid(max_rows, max_cols, 'playMat.png.vertex.stripped', 'playMat.png.edge.stripped')\n",
-    "#print(grid.grid)"
+    "\n",
+    "path = ShortestPath(neighbors_dict, 122, 2).next_node()\n",
+    "print(path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
