work on dijkstra

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
@@ -177,12 +177,37 @@
     "\n",
     "    def dijkstra(self, G, start, end=None):\n",
     "        \"\"\"\n",
-    "        Find shortest paths from the start vertex to all vertices nearer than or equal to the end.\n",
+    "        Find shortest paths from the  start vertex to all vertices nearer than or equal to the end.\n",
+    "\n",
+    "        The input graph G is assumed to have the following representation:\n",
+    "        A vertex can be any object that can be used as an index into a dictionary.\n",
+    "        G is a dictionary, indexed by vertices.  For any vertex v, G[v] is itself a dictionary,\n",
+    "        indexed by the neighbors of v.  For any edge v->w, G[v][w] is the length of the edge.\n",
+    "        This is related to the representation in <http://www.python.org/doc/essays/graphs.html>\n",
+    "        where Guido van Rossum suggests representing graphs as dictionaries mapping vertices\n",
+    "        to lists of outgoing edges, however dictionaries of edges have many advantages over lists:\n",
+    "        they can store extra information (here, the lengths), they support fast existence tests,\n",
+    "        and they allow easy modification of the graph structure by edge insertion and removal.\n",
+    "        Such modifications are not needed here but are important in many other graph algorithms.\n",
+    "        Since dictionaries obey iterator protocol, a graph represented as described here could\n",
+    "        be handed without modification to an algorithm expecting Guido's graph representation.\n",
+    "\n",
+    "        Of course, G and G[v] need not be actual Python dict objects, they can be any other\n",
+    "        type of object that obeys dict protocol, for instance one could use a wrapper in which vertices\n",
+    "        are URLs of web pages and a call to G[v] loads the web page and finds its outgoing links.\n",
+    "\n",
+    "        The output is a pair (D,P) where D[v] is the distance from start to v and P[v] is the\n",
+    "        predecessor of v along the shortest path from s to v.\n",
+    "\n",
+    "        Dijkstra's algorithm is only guaranteed to work correctly when all edge lengths are positive.\n",
+    "        This code does not verify this property for all edges (only the edges examined until the end\n",
+    "        vertex is reached), but will correctly compute shortest paths even for some graphs with negative\n",
+    "        edges, and will raise an exception if it discovers that a negative edge has caused it to make a mistake.\n",
     "        \"\"\"\n",
     "\n",
-    "        D = {} # dictionary of final distances\n",
-    "        P = {} # dictionary of predecessors\n",
-    "        Q = priorityDictionary() # estimated distances of non-final vertices\n",
+    "        D = {}\t# dictionary of final distances\n",
+    "        P = {}\t# dictionary of predecessors\n",
+    "        Q = priorityDictionary()\t# estimated distances of non-final vertices\n",
     "        Q[start] = 0\n",
     "\n",
     "        for v in Q:\n",
@@ -208,7 +233,6 @@
     "        \"\"\"\n",
     "\n",
     "        D,P = self.dijkstra(G,start,end)\n",
-    "        #print P\n",
     "        Path = []\n",
     "        while 1:\n",
     "            Path.append(end)\n",
@@ -220,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -364,6 +388,9 @@
     "            # to the weight.\n",
     "            node_a.neighbors[node_b.node_id] = edge.weight\n",
     "            \n",
+    "            # Added to make undirected.\n",
+    "            node_b.neighbors[node_a.node_id] = edge.weight\n",
+    "            \n",
     "        # Initialize a dictionary to store just the neighbors.\n",
     "        self.neighbors_dict = {}\n",
     "        \n",
@@ -384,7 +411,7 @@
     "                \n",
     "                #print (node_id, destination_node_id)\n",
     "                \n",
-    "#                 node.paths[destination_node_id] = ShortestPath(self.neighbors_dict, \n",
+    "#               node.paths[destination_node_id] = ShortestPath(self.neighbors_dict, \n",
     "#                                                                node_id, \n",
     "#                                                                destination_node_id).next_node()\n",
     "            \n",
@@ -402,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -413,6 +440,19 @@
      "text": [
       "[122, 98, 77, 59, 43, 26, 2]\n"
      ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "122",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-224-d0eb6d5bfe36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mShortestPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m122\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mShortestPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m122\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#print(path)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-222-709340136e5c>\u001b[0m in \u001b[0;36mnext_node\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mnext_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mshortest_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshortest_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mshortest_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-222-709340136e5c>\u001b[0m in \u001b[0;36mshortest_path\u001b[0;34m(self, G, start, end)\u001b[0m\n\u001b[1;32m     77\u001b[0m             \u001b[0mPath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m             \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m         \u001b[0mPath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 122"
+     ]
     }
    ],
    "source": [
@@ -422,7 +462,109 @@
     "grid = Grid(max_rows, max_cols, 'playMat.png.vertex.stripped', 'playMat.png.edge.stripped')\n",
     "\n",
     "path = ShortestPath(neighbors_dict, 122, 2).next_node()\n",
-    "print(path)"
+    "print(path)\n",
+    "print(ShortestPath(neighbors_dict, 2, 122).next_node())\n",
+    "\n",
+    "#print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25, ['D', 'B', 'A'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "\n",
+    "class Graph(object):\n",
+    "    def __init__(self):\n",
+    "        self.nodes = set()\n",
+    "        self.edges = defaultdict(list)\n",
+    "        self.distances = {}\n",
+    "\n",
+    "    def add_node(self, value):\n",
+    "        self.nodes.add(value)\n",
+    "\n",
+    "    def add_edge(self, from_node, to_node, distance):\n",
+    "        self.edges[from_node].append(to_node)\n",
+    "        self.edges[to_node].append(from_node)\n",
+    "        self.distances[(from_node, to_node)] = distance\n",
+    "        self.distances[(to_node, from_node)] = distance\n",
+    "\n",
+    "\n",
+    "def dijkstra(graph, initial):\n",
+    "    visited = {initial: 0}\n",
+    "    path = {}\n",
+    "\n",
+    "    nodes = set(graph.nodes)\n",
+    "\n",
+    "    while nodes:\n",
+    "        min_node = None\n",
+    "        for node in nodes:\n",
+    "            if node in visited:\n",
+    "                if min_node is None:\n",
+    "                    min_node = node\n",
+    "                elif visited[node] < visited[min_node]:\n",
+    "                    min_node = node\n",
+    "        if min_node is None:\n",
+    "            break\n",
+    "\n",
+    "        nodes.remove(min_node)\n",
+    "        current_weight = visited[min_node]\n",
+    "\n",
+    "        for edge in graph.edges[min_node]:\n",
+    "            try:\n",
+    "                weight = current_weight + graph.distances[(min_node, edge)]\n",
+    "            except:\n",
+    "                continue\n",
+    "            if edge not in visited or weight < visited[edge]:\n",
+    "                visited[edge] = weight\n",
+    "                path[edge] = min_node\n",
+    "\n",
+    "    return visited, path\n",
+    "\n",
+    "\n",
+    "def shortest_path(graph, origin, destination):\n",
+    "    visited, paths = dijkstra(graph, origin)\n",
+    "    full_path = deque()\n",
+    "    _destination = paths[destination]\n",
+    "\n",
+    "    while _destination != origin:\n",
+    "        full_path.appendleft(_destination)\n",
+    "        _destination = paths[_destination]\n",
+    "\n",
+    "    full_path.appendleft(origin)\n",
+    "    full_path.append(destination)\n",
+    "\n",
+    "    return visited[destination], list(full_path)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    graph = Graph()\n",
+    "\n",
+    "    for node in ['A', 'B', 'C', 'D', 'E', 'F', 'G']:\n",
+    "        graph.add_node(node)\n",
+    "\n",
+    "    graph.add_edge('A', 'B', 10)\n",
+    "    graph.add_edge('A', 'C', 20)\n",
+    "    graph.add_edge('B', 'D', 15)\n",
+    "    graph.add_edge('C', 'D', 30)\n",
+    "    graph.add_edge('B', 'E', 50)\n",
+    "    graph.add_edge('D', 'E', 30)\n",
+    "    graph.add_edge('E', 'F', 5)\n",
+    "    graph.add_edge('F', 'G', 2)\n",
+    "\n",
+    "    print(shortest_path(graph, 'D', 'A')) # output: (25, ['A', 'B', 'D'])"
    ]
   },
   {
